--- a/flexbox.css
+++ b/flexbox.css
@@ -1,3 +1,7 @@
 .flex-container {
     display: flex;
+    justify-content: center;
+    list-style-type: none;
+    justify-content: space-around;
+    color: blue;
 }
